@@ -5,6 +5,9 @@ Griffith ChangeLog
 (c) 2005-2010  Vasco Nunes, Piotr Ożarowski
 
 
+2011-01-10  Michael Jahn
+	* fixed iPod export plugin in case of missing values
+
 2010-12-07  Piotr Ożarowski
 	* Fix few spelling mistakes (thanks to Olivier BOURSIN)
 
